@@ -5,7 +5,6 @@ import com.fasterxml.jackson.annotation.JsonFormat.Shape;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import kr.momo.domain.attendee.Attendee;
 import kr.momo.domain.availabledate.AvailableDate;
 import kr.momo.domain.availabledate.AvailableDates;
@@ -15,6 +14,7 @@ public record MeetingResponse(
         String meetingName,
         @JsonFormat(shape = Shape.STRING, pattern = "HH:mm", timezone = "Asia/Seoul") LocalTime firstTime,
         @JsonFormat(shape = Shape.STRING, pattern = "HH:mm", timezone = "Asia/Seoul") LocalTime lastTime,
+        boolean isLocked,
         List<LocalDate> availableDates,
         List<String> attendeeNames
 ) {
@@ -22,7 +22,7 @@ public record MeetingResponse(
     public static MeetingResponse of(Meeting meeting, AvailableDates availableDates, List<Attendee> attendees) {
         List<LocalDate> dates = availableDates.getAvailableDates().stream()
                 .map(AvailableDate::getDate)
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> attendeeNames = attendees.stream()
                 .map(Attendee::name)
@@ -32,6 +32,7 @@ public record MeetingResponse(
                 meeting.getName(),
                 meeting.startTimeslotTime(),
                 meeting.endTimeslotTime(),
+                meeting.isLocked(),
                 dates,
                 attendeeNames
         );
